syntax = "proto3";

package players;

option go_package = "github.com/kainn9/grpc_game/proto";

message PlayerReq {
  string id = 1;
  string input = 2;
}

message Player {
  string id = 1;
  double lx = 2;
  double ly = 3;
  double speedX = 4;     
  double speedY = 5;
  bool FacingRight = 8;
  int32 world = 9;
  bool jumping = 10;
  string CurrAttack = 11;
  string CC = 12;
  string windup = 13;
  string AttackMovement = 14;
  int32 health = 15;
  bool defending = 16;
  int32 role = 17;
  bool dead = 18;
  string cooldowns = 19;
}

message PlayerResp {
  repeated Player players = 1;
  ParticleSystem particleSystem = 2;
}

message Vector2 {
  float x = 1;
  float y = 2;
}

message Particle {
  Vector2 position = 1;
  Vector2 velocity = 2;
  double size = 3;
  string color = 4; // Represent the color as a string, e.g., "255,255,255,255"
  double id = 5;
  double lifetime = 6;
  double age = 7;
  double damage = 8;
  bool active = 9;
}

message ParticleSystem {
  repeated Particle particles = 1;
}

service PlayersService {
  rpc PlayerLocation (stream PlayerReq) returns (stream PlayerResp);
}